# SCD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scdtoolkit/: __init__.py
scdtoolkit/algorithms/: SCD-pos-Graph.py  multimodal.py  unsup_scd_improved.py
scdtoolkit/io/: audio.py  rttm.py
scdtoolkit/utils/: logging.py
scripts/: scd-multimodal_cli.py  scd_graph_cli.py  scd_unsup_cli.py
tests/: smoke_test.py
