[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scdtoolkit"
version = "0.1.1"
description = "Unified Speaker Change Detection toolkit: unsupervised, graph-based, and multimodal"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "A. T."}]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "librosa>=0.10",
  "soundfile>=0.12",
  "scikit-learn>=1.1",
  "tqdm>=4.65",
  "networkx>=3.0",
  "matplotlib>=3.6"
]

[project.scripts]
scd-unsup = "scripts.scd_unsup_cli:main"
scd-graph = "scripts.scd_graph_cli:main"
scd-multimodal = "scripts.scd_multimodal_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["algorithms*", "scd_toolkit*", "scripts*"]
